--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
   <script language="javascript" type="text/javascript" src="libraries/g.js"></script>
   <script language="javascript" type="text/javascript" src="Line.js"></script>
   <script language="javascript" type="text/javascript" src="LineVertex.js"></script>
+  <script language="javascript" type="text/javascript" src="Toolbar.js"></script>
   <script language="javascript" type="text/javascript" src="/libraries/g.js"></script>
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsfeat/0.0.8/jsfeat-min.js"></script>
   <style> body { padding: 0; margin: 0; } </style>
 </head>
 <body>
   <script src="AdaptiveLines.js"></script>
-  <p>Blur Size: <input type="range" id="blurSize" value="30"></p>
-  <p>Low Threshold: <input type="range" id="lowThreshold" value="15"></p>
-  <p>High Threshold: <input type="range" id="highThreshold" value="25"></p>
 </body>
 </html>
